Added feature of saving and retrieving progress bar data in index.js, also hid respective data on login and logout

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="app">
 
         <button id="login-btn">Login with Google</button>
-        <button id="logout-btn">Logout</button>
+        <button id="logout-btn" style="display: none;">Logout</button>
 
-        <div class="progress-bar-container">
+        <div class="progress-bar-container" style="display: none;">
             <input type="range" min="0" max="100" value="50" class="progress-bar" id="progress-bar-1">
             <span id="percentage-1">50%</span>
         </div>
