--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+    <div id="loading-spinner" class="spinner" style="display: none;"></div>
+    
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Progress App</a>
         <div class="collapse navbar-collapse">
@@ -35,7 +37,7 @@
         </div>
     </main>
     <footer class="text-center mt-5">
-        <p>&copy; 2023 Your App. All rights reserved.</p>
+        <p>&copy; 2024 SlidingProgressBar. All rights reserved.</p>
     </footer>
 
     <script type="module" src="src/index.js"></script>
