--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="loading-spinner" class="spinner" style="display: none;"></div>
     
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="#">Progress App</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
