--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
     <div id="loading-spinner" class="spinner" style="display: none;"></div>
     
-    <header class="navbar navbar-expand-md navbar-light bg-light">
+    <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Progress App</a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <button id="login-btn" class="btn btn-primary">Login with Google</button>
@@ -36,9 +39,6 @@
             </div>
         </div>
     </main>
-    <footer class="text-center mt-5">
-        <p>&copy; 2024 SlidingProgressBar. All rights reserved.</p>
-    </footer>
 
     <script type="module" src="src/index.js"></script>
 </body>
