--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         </div>
     </main>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script type="module" src="src/index.js"></script>
 </body>
 </html>
