add progress bars container in html

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         </div>
     </header>
     <main class="container mt-5">
-        <div class="progress-bar-container" style="display: none;">
-            <div class="form-group">
-                <input type="range" min="0" max="100" value="50" class="progress-bar form-control-range" id="progress-bar-1">
-                <div class="d-flex justify-content-between">
-                    <label for="progress-bar-1">Progress</label>
-                    <span id="percentage-1">50%</span>
+        <div class="progress-bars-container">
+            <div class="progress-bar-container" style="display: none;">
+                <div class="form-group">
+                    <input type="range" min="0" max="100" value="50" class="progress-bar form-control-range" id="progress-bar-1">
+                    <div class="d-flex justify-content-between">
+                        <label for="progress-bar-1">Progress</label>
+                        <span id="percentage-1">50%</span>
+                    </div>
                 </div>
             </div>
         </div>
